# ai_categorization

./: .gitignore  README.md  coopervision_predictions.csv  pyproject.toml  requirements.txt
data/: suplari_coopervision_Categories.csv
notebooks/: test.ipynb
src/: __init__.py  bert_categorization  bert_categorization_utils.py  coopervision_bert_categorization.py  model_api.py
src/anthropic_classification/: coopervision_utils_dev.py
src/assisted_categorization/: anthropic_utils_dev.py  hierarchical_categorization  open_ai_categorization.py  vendor_descriptions.py
src/bert_categorization/: TransactionDataset.py
src/bert_classification/: HierarchicalBertClassifier.py  bert_categorization_del.py  main.py
